test/zinc_source/compile_errors/enums/08_duplicate_match_arm.zn
// expected-error: duplicate match arm for variant 'Message.Quit'
enum Message {
    Quit
}

fn main() {
    msg = Message.Quit
    match msg {
        Message.Quit => {
            print("one")
        },
        Message.Quit => {
            print("two")
        },
    }
}
